--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="./src/assets/images/logo/Logo_uden_tekst.png" />
+  <link
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+  rel="stylesheet"
+/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Optimer dine konverteringer med CleverReply - din vej til konverteringssucces. Vi genererer kvalificerede B2C leads gennem engagerende konkurrencer og skræddersyede kampagner. Vores metode bygger ægte forbindelser, baseret på samtykke, og dokumenterede resultater. Kontakt vores ekspertteam i dag og omdan potentielle kunder til loyale kunder. Vælg CleverReply som din pålidelige partner i konverteringsoptimering!" />
 
